Tool-assisted rewrite of .text to .mq-text
Remaining instances of 'text':
.gitattributes:* text=lf
.gitattributes:src/font/* text=binary
README.md:    <link rel="stylesheet" type="text/css" href="/path/to/mathquill.css">`
README.md:overline are all borders, not text. (Example below.)
legacy-classes.txt:text
src/commands.js://text-decoration
src/commands.js:  _.init = function(ctrlSeq, tag, text) {
src/commands.js:    _super.init.call(this, ctrlSeq, '<'+tag+' class="mq-non-leaf"><span class="non-leaf '+tag+'">&0</span></'+tag+'>', [ text ]);
src/commands.js:LatexCmds.text =
src/commands.js:  _.ctrlSeq = '\\text';
src/commands.js:      this.replacedText = replacedText.remove().jQ.text();
src/commands.js:    // TODO: correctly parse text mode
src/commands.js:      .map(function(text) {
src/commands.js:        for (var i = 0; i < text.length; i += 1) {
src/commands.js:          var ch = VanillaSymbol(text.charAt(i));
src/commands.js:  makeTextBlock('\\textit', 'i', 'class="mq-text"');
src/commands.js:  makeTextBlock('\\textbf', 'b', 'class="mq-text"');
src/commands.js:  makeTextBlock('\\textsf', 'span', 'class="mq-sans-serif mq-text"');
src/commands.js:  makeTextBlock('\\texttt', 'span', 'class="mq-monospace mq-text"');
src/commands.js:  makeTextBlock('\\textsc', 'span', 'style="font-variant:small-caps" class="mq-text"');
src/commands.js:  makeTextBlock('\\uppercase', 'span', 'style="text-transform:uppercase" class="mq-text"');
src/commands.js:  makeTextBlock('\\lowercase', 'span', 'style="text-transform:lowercase" class="mq-text"');
src/commands.js:  _.text = function() {
src/commands.js:    return '[' + this.foldChildren([], function(text, child) {
src/commands.js:      text.push(child.text());
src/commands.js:      return text;
src/css/editable.less:// when empty by inserting invisible text.
src/css/math.less:    text-align: center;
src/css/math.less:    text-align: center;
src/css/math.less:    text-align: center;
src/css/math.less:    cursor: text;
src/css/selectio

--- a/src/css/math.less
+++ b/src/css/math.less
@@ -17,7 +17,7 @@
   }
 
   // TODO: dasherize non-symbola
-  var, .text, .mq-nonSymbola {
+  var, .mq-text, .mq-nonSymbola {
     font-family: @times;
     line-height: .9;
   }
@@ -45,7 +45,7 @@
   }
 
 
-  .text {
+  .mq-text {
     font-size: 87%;
   }
 
