Tool-assisted rewrite of .sup and .sub to .mq-sup and .mq-sub
legacy-classes.txt:sub
src/css/math.less:  // sup/sub
src/css/math.less:  sup, sub {
src/css/math.less:    // within sup/sub.
src/css/math.less:  sub {
src/rootelements.js:      var sub = LatexCmds._('_');
src/rootelements.js:      var subBlock = MathBlock().adopt(sub, 0, 0);
src/rootelements.js:      sub.blocks = [ subBlock ];
src/rootelements.js:    if (sub) sub.adopt(this, this.lastChild, 0);
src/symbols.js:LatexCmds.sub = LatexCmds.subset = bind(BinaryOperator,'\\subset ','&sub;');
test/support/jquery-1.7.2.js:	sub: function() {
test/support/jquery-1.7.2.js:		jQuerySub.sub = this.sub;
test/unit/updown.test.js:    var sub = rootBlock.lastChild,
test/unit/updown.test.js:      subBlock = sub.firstChild;
test/unit/updown.test.js:    assert.equal(sub.latex(), '_{12}', 'last el is subscript');
test/unit/updown.test.js:    assert.equal(cursor.prev, sub, 'cursor is at the end of root block');
test/unit/updown.test.js:    assert.equal(cursor.prev, sub, 'up when cursor at end of subscript puts cursor after subscript');
test/unit/updown.test.js:    assert.equal(cursor.next, sub, 'cursor up in beginning of subscript puts cursor before subscript');
test/unit/updown.test.js:    assert.equal(cursor.next, sub, 'cursor up in middle of subscript puts cursor before subscript');
test/unit/updown.test.js:      sub = dxBlock.lastChild,
test/unit/updown.test.js:      subBlock = sub.firstChild,
test/unit/updown.test.js:    assert.equal(cursor.next, sub, 'cursor up from subscript fraction numerator goes before subscript');
test/unit/updown.test.js:    assert.equal(cursor.next, sub, 'cursor up up from subscript fraction denominator that\s not last goes before subscript');
test/unit/updown.test.js:    assert.equal(cursor.prev, sub, 'cursor up up from subscript fraction denominator that is last goes after subscript');

--- a/src/css/math.less
+++ b/src/css/math.less
@@ -154,7 +154,7 @@
       min-width: .5em;
     }
 
-    .sup {
+    .mq-sup {
       vertical-align: bottom;
     }
   }
@@ -166,7 +166,7 @@
       vertical-align: -.6em;
     }
 
-    .sub {
+    .mq-sub {
       vertical-align: top;
     }
   }
