Tool-assisted rewrite of .selection to .mq-selection
README.md:* To insert a LaTeX command at the current cursor position or with the current selection:
README.md:cursor and highlighted selection.
legacy-classes.txt:selection
src/commands.js:    // if I'm replacing a selection fragment, just wrap in parens
src/commands.js:    if (!this.cursor.selection &&
src/cursor.js:        if (this.selection && this.selection.first.prev === this.prev)
src/cursor.js:          this.jQ.insertBefore(this.selection.jQ);
src/cursor.js:    if (this.selection)
src/cursor.js:      this.insertBefore(this.selection.first).clearSelection();
src/cursor.js:    if (this.selection)
src/cursor.js:      this.insertAfter(this.selection.last).clearSelection();
src/cursor.js:    if (this.selection) {
src/cursor.js:      this.prev = this.selection.first.prev;
src/cursor.js:      this.next = this.selection.last.next;
src/cursor.js:      cmd.replaces(this.selection);
src/cursor.js:      delete this.selection;
src/cursor.js:    this.hide().selection = Selection(left.prev.next || left.parent.firstChild, right.next.prev || right.parent.lastChild);
src/cursor.js:    if (this.selection) {
src/cursor.js:      if (this.selection.first === this.next) { //if cursor is at left edge of selection;
src/cursor.js:          this.hopLeft().selection.extendLeft();
src/cursor.js:          this.insertBefore(this.parent.parent).selection.levelUp();
src/cursor.js:      else { //else cursor is at right edge of selection, retract left if possible
src/cursor.js:        if (this.selection.first === this.selection.last) {
src/cursor.js:          this.clearSelection().show(); //clear selection if retracting to nothing
src/cursor.js:        this.selection.retractLeft();
src/cursor.js:      this.hide().selection = Selection(this.next);
src/cursor.js:    if (this.selection) {
src/cursor.js:      if (this.selection.last === this.prev) { //if cursor is at right edge of selection;
src/cursor.js:          this.hopRight().selection.exte

--- a/src/css/selections.less
+++ b/src/css/selections.less
@@ -9,7 +9,7 @@
 // for more details.
 
 .mathquill-rendered-math, .mathquill-editable {
-  .selection {
+  .mq-selection {
     &, & .mq-non-leaf, & .mq-scaled {
       background: #B4D5FE !important;
       background: Highlight !important;
