Tool-assisted rewrite of .last to .mq-last
Remaining instances of 'last':
legacy-classes.txt:last
src/commands.js:    this.bracketjQs = jQ.children(':first').add(jQ.children(':last'));
src/commands.js:    this.jQ = this.jQ.last();
src/cursor.js:    this.jQ.insertAfter(el.jQ.last());
src/cursor.js:    this.jQ.insertAfter(this.next.jQ.last());
src/cursor.js:      this.insertAfter(this.selection.last).clearSelection();
src/cursor.js:      this.next = this.selection.last.next;
src/cursor.js:        if (this.selection.first === this.selection.last) {
src/cursor.js:      if (this.selection.last === this.prev) { //if cursor is at right edge of selection;
src/cursor.js:        if (this.selection.first === this.selection.last) {
src/cursor.js:    this.next = this.selection.last.next;
src/cursor.js:      gramp = seln.first = seln.last = seln.last.parent.parent;
src/cursor.js:    this.last = this.last.next;
src/cursor.js:    this.last.jQ.appendTo(this.jQ);
src/cursor.js:    this.last.jQ.insertAfter(this.jQ);
src/cursor.js:    this.last = this.last.prev;
src/math.js:    //append the cursor to the first empty child, or if none empty, the last one
src/math.js:  _.init = function(first, last) {
src/math.js:    _super.init.call(this, first, last || first);
src/publicapi.js:    return this.children(':last').html().replace(/ ?mq-hasCursor|mq-hasCursor /, '')
src/publicapi.js:              cursor.next = selection.last.next;
src/symbols.js:            var last = letter;
src/symbols.js:          last.isLastLetter = true;
src/symbols.js:          if (!(last.next instanceof SupSub || last.next instanceof Bracket))
src/symbols.js:            last.jQ.addClass('mq-last');
src/symbols.js:          first = last;
src/tree.js:  _.last = 0;
src/tree.js:  _.init = function(first, last) {
src/tree.js:    pray('no half-empty fragments', !first === !last);
src/tree.js:    pray('last node is passed to Fragment', last instanceof Node);
src/tree.js:    pray('first and last have the same parent',
src/tre

--- a/src/css/math.less
+++ b/src/css/math.less
@@ -200,7 +200,7 @@
     line-height: 1;
     font-style: normal;
   }
-  var.mq-un-italicized.last {
+  var.mq-un-italicized.mq-last {
     padding-right: .2em;
   }
 
