Tool-assisted rewrite of .int to .mq-int
legacy-classes.txt:int
src/commands.js:      this.prev.ctrlSeq === '\\int ' || (
src/commands.js:        && this.prev.prev && this.prev.prev.ctrlSeq === '\\int '
src/symbols.js:  int: 1*/

--- a/src/css/math.less
+++ b/src/css/math.less
@@ -122,7 +122,7 @@
       padding-left: .1em;
     }
 
-    &.int, &.mq-nthroot {
+    &.mq-int, &.mq-nthroot {
       font-size: 80%;
     }
 
@@ -144,7 +144,7 @@
 
   sup {
     vertical-align: .5em;
-    &.int, &.mq-nthroot {
+    &.mq-int, &.mq-nthroot {
       vertical-align: 0.8em
     }
 
@@ -162,7 +162,7 @@
   sub {
     vertical-align: -.4em;
 
-    &.int {
+    &.mq-int {
       vertical-align: -.6em;
     }
 
