Tool-assisted rewrite of .handle to .mq-handle
Remaining instances of 'handle':
legacy-classes.txt:handle
src/css/editable.less:      // square handle body
src/cursor.js:  _.handle = 0;
src/cursor.js:    if (!this.handle) {
src/cursor.js:      this.handle = $('<span class="mq-handle"></span>').appendTo(this.jQ);
src/cursor.js:    if (this.handle) {
src/cursor.js:      this.handle.remove();
src/cursor.js:      delete this.handle;
src/publicapi.js:      if (cursor && touchstartTarget !== cursor.handle[0]) {
src/rootelements.js:  // event handling for touch-draggable handle
src/rootelements.js:        cursor.handle.css({
src/rootelements.js:        cursor.handle.css({ WebkitTransform: '', opacity: '' });
test/support/jquery-1.7.2.js:		// Make sure leading/trailing whitespace is removed (IE can't handle it)
test/support/jquery-1.7.2.js:			// Tweaked logic slightly to handle Blackberry 4.7 RegExp issues #6930
test/support/jquery-1.7.2.js:		// Ban all objects except for Flash (which handle expandos)
test/support/jquery-1.7.2.js:			// We have to handle DOM nodes and JS objects differently because IE6-7
test/support/jquery-1.7.2.js:			// we must handle all of these cases
test/support/jquery-1.7.2.js:	// A method for determining if a DOM node can handle the data expando
test/support/jquery-1.7.2.js:					// handle most common string cases
test/support/jquery-1.7.2.js:					// handle cases where value is null/undef or number
test/support/jquery-1.7.2.js:		eventHandle = elemData.handle;
test/support/jquery-1.7.2.js:			elemData.handle = eventHandle = function( e ) {
test/support/jquery-1.7.2.js:			// Add elem as a property of the handle fn to prevent a memory leak with IE non-native events
test/support/jquery-1.7.2.js:			j, events, special, handle, eventType, handleObj;
test/support/jquery-1.7.2.js:					jQuery.removeEvent( elem, type, elemData.handle );
test/support/jquery-1.7.2.js:			handle = elemData.handle;
test/support/jquery-1.7.2.js:			if ( handle ) {
test/support/jquery-1.

--- a/src/css/editable.less
+++ b/src/css/editable.less
@@ -11,7 +11,7 @@
     .mq-line { border-left: 1px solid black; }
     &.mq-blink .mq-line { visibility: hidden; }
 
-    .handle {
+    .mq-handle {
       display: inline-block;
       -webkit-transform-origin: 10px -25px;
       -webkit-transform: translateX(.5px);
