Tool-assisted rewrite of .blur to .mq-blur
Remaining instances of 'blur':
legacy-classes.txt:blur
src/commands.js:    this.firstChild.blur();
src/commands.js:    //FIXME HACK blur removes the TextBlock
src/commands.js:    this.firstChild.blur = function() { delete this.blur; return this; };
src/commands.js:  _.blur = function() {
src/commands.js:    this.firstChild.blur = function() {
src/cursor.js:    old_parent.blur(); //blur may need to know cursor's destination
src/math.js:    // empty elements need the empty box provided by blur to
src/math.js:    self.postOrder('blur');
src/math.js:  _.blur = function() {
src/publicapi.js:  case 'blur':
src/publicapi.js:        if (block.blurred) cursor.hide().parent.blur();
src/publicapi.js:          if (block.blurred) cursor.hide().parent.blur();
src/publicapi.js:          if (block.blurred) cursor.hide().parent.blur();
src/publicapi.js:        if (block.blurred) cursor.hide().parent.blur();
src/rootelements.js:    textarea.blur(function() {
src/rootelements.js:      setTimeout(detach); //detaching during blur explodes in WebKit
src/rootelements.js:  //focus and blur handling
src/rootelements.js:  }).blur(function(e) {
src/rootelements.js:    cursor.hide().parent.blur();
src/rootelements.js:  }).blur();
test/support/jquery-1.7.2.js:		// focus/blur morphs to focusin/out; ensure we're not firing them right now
test/support/jquery-1.7.2.js:				// IE<9 dies on focus/blur to hidden element (#1486)
test/support/jquery-1.7.2.js:				if ( ontype && elem[ type ] && ((type !== "focus" && type !== "blur") || event.target.offsetWidth !== 0) && !jQuery.isWindow( elem ) ) {
test/support/jquery-1.7.2.js:		blur: {
test/support/jquery-1.7.2.js:				// IE doesn't fire change on a check/radio until blur; trigger it on click
test/support/jquery-1.7.2.js:				// after a propertychange. Eat the blur-change in special.change.handle.
test/support/jquery-1.7.2.js:				// This still fires onchange a second time for check/radio after blur.
test/support/jq

--- a/src/css/selections.less
+++ b/src/css/selections.less
@@ -42,7 +42,7 @@
       filter: progid:DXImageTransform.Microsoft.Chroma(color='#3399FF') !important;
     }
 
-    &.blur {
+    &.mq-blur {
       &, & .mq-non-leaf, & .mq-matrixed {
         background: #D4D4D4 !important;
         color: black;
