Tool-assisted rewrite of .array to .mq-array
legacy-classes.txt:array
src/math.js:    // .blocks array of child blocks.
test/support/jquery-1.7.2.js:				// HANDLE: $(html) -> $(array)
test/support/jquery-1.7.2.js:	// Get the whole matched element set as a clean array
test/support/jquery-1.7.2.js:			// Return a 'clean' array
test/support/jquery-1.7.2.js:	// Take an array of elements and push it onto the stack
test/support/jquery-1.7.2.js:	// (You can seed the arguments with an array of args, but this is
test/support/jquery-1.7.2.js:	makeArray: function( array, results ) {
test/support/jquery-1.7.2.js:		if ( array != null ) {
test/support/jquery-1.7.2.js:			var type = jQuery.type( array );
test/support/jquery-1.7.2.js:			if ( array.length == null || type === "string" || type === "function" || type === "regexp" || jQuery.isWindow( array ) ) {
test/support/jquery-1.7.2.js:				push.call( ret, array );
test/support/jquery-1.7.2.js:				jQuery.merge( ret, array );
test/support/jquery-1.7.2.js:	inArray: function( elem, array, i ) {
test/support/jquery-1.7.2.js:		if ( array ) {
test/support/jquery-1.7.2.js:				return indexOf.call( array, elem, i );
test/support/jquery-1.7.2.js:			len = array.length;
test/support/jquery-1.7.2.js:				if ( i in array && array[ i ] === elem ) {
test/support/jquery-1.7.2.js:		// Go through the array, only saving the items
test/support/jquery-1.7.2.js:		// Go through the array, translating each of the items to their
test/support/jquery-1.7.2.js:				// Support array or space separated string names for data keys
test/support/jquery-1.7.2.js:						// We don't need an array for one selects
test/support/jquery-1.7.2.js:						// Multi-Selects return an array
test/support/jquery-1.7.2.js: * Utility function for retreiving the text value of an array of DOM nodes
test/support/jquery-1.7.2.js:		// If no nodeType, this is expected to be an array
test/support/jquery-1.7.2.js:		last: function( elem, i, match, array ) {
test/support/jquery-1.7.2.js:			return i =

--- a/src/css/math.less
+++ b/src/css/math.less
@@ -183,12 +183,12 @@
     transform-origin: bottom center;
   }
 
-  .array {
+  .mq-array {
     vertical-align: middle;
     text-align: center;
   }
 
-  .array > span {
+  .mq-array > span {
     display: block;
   }
 
