Tool-assisted rewrite of .to to .mq-to
BUILDING:You will then need to update the dependencies with `npm`, like so:
BUILDING:If this installs properly, you should simply be able to run `make`,
BUILDING:If any of this does not work, please let us know!  We want to make
Makefile:	@echo "** now open test/{unit,visual}.html in your browser to run the {unit,visual} tests. **"
Makefile:SITE_COMMITMSG = 'updating mathquill to $(VERSION)'
README.md:`font/` directory relative to `mathquill.css` (or change your copy of
README.md:`mathquill.css` to include from the right directory)
README.md:    <link rel="stylesheet" type="text/css" href="/path/to/mathquill.css">`
README.md:    <script src="/path/to/mathquill.min.js"></script>
README.md:Then wherever you'd like to embed LaTeX math to be rendered in HTML:
README.md:document ready, you will need to call our jQuery plugin after inserting into
README.md:MathQuill has to perform calculations based on computed CSS values. If you
README.md:it is visible MathQuill will need to recalculate:
README.md:Due to technical limitations of IE8, if you support it, and want to give
README.md:need to, in addition to of course setting the background color on the
README.md:For example, to style as white-on-black instead of black-on-white:
README.md:background, so for them it's sufficient to set the background color on
README.md:transforms, so MathQuill uses a matrix filter to stretch parens etc,
README.md:so MathQuill defaults to white.)
README.md:If you hack on MathQuill, you're gonna want to build and test the source files
README.md:you edit. In addition to `make`, MathQuill uses some build tools written on
README.md:- `make dev` won't try to minify MathQuill (which can be take nonzero time)
README.md:All the JavaScript that you actually want to read is in `src/`, `build/` is
README.md:created when you run `make` just to contain a cat'ed and minified version of
README.md:  They're how the tree is supposed to traversed and modified.
README.md:`cre

--- a/src/css/math.less
+++ b/src/css/math.less
@@ -269,10 +269,10 @@
       display: inline-block;
     }
 
-    .mq-from, .to  {
+    .mq-from, .mq-to  {
       display: block;
     }
-    .mq-from, .to  {
+    .mq-from, .mq-to  {
       font-size: 80%;
     }
     .mq-from {
