--- a/src/css/textarea.less
+++ b/src/css/textarea.less
@@ -15,6 +15,8 @@
     position: absolute;
     clip: rect(1em 1em 1em 1em);
     resize: none;
+    height: 1px;
+    width: 1px;
   }
   // to be focusable, need to be visible, i.e. nonzero height/width;
   // Mobile Safari needs tabindex=0 span instead of textarea to not
