Fix handle tip misaligned in Safari on iOS 7
Fix desmosinc/knox#3136

--- a/src/css/editable.less
+++ b/src/css/editable.less
@@ -37,6 +37,7 @@
         border-right: 10px solid transparent;
         border-bottom: 10px solid black;
         top: -10px;
+        left: 0;
         // cover occasional subpixel (floating-point rounding error?) gap
         -webkit-transform: translateY(.2px); // between tip and body
       }
