--- a/src/css/editable.less
+++ b/src/css/editable.less
@@ -1,10 +1,12 @@
 .mathquill-editable {
   .inline-block;
-  white-space: nowrap;
-  overflow: hidden;
-  vertical-align: middle;
   .mathquill-root-block {
-    margin-right: 1px;
+    .inline-block;
+    width: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+    vertical-align: middle;
+    padding-right: 1px;
   }
 
   .mq-cursor {
