Add gray border to math fields inside static math

--- a/src/css/editable.less
+++ b/src/css/editable.less
@@ -74,8 +74,10 @@
   }
 
   // special styles for editables within static math
-  .mathquill-embedded-latex & {
+  .mathquill-rendered-math & {
     margin: 1px;
+    border: 1px solid gray;
+    padding: 2px;
   }
 
   ////
