Fix mousedown focus on mathfield
If the element has a border, the click can come into the tree
higher than the root-element.

--- a/src/css/editable.less
+++ b/src/css/editable.less
@@ -104,7 +104,7 @@
 // Keeps blocks from collapsing to zero width/height
 // when empty by inserting invisible text.
 // TODO: find a way to unify the three concepts below.
-.mathquill-editable.mq-empty:after,
+.mathquill-root-block.mq-empty:after,
 .mathquill-textbox:after,
 .mathquill-rendered-math .mq-empty:after {
   content: '';
