Uncenter inside numerator and denominator
Want numerator and denominator centered above/below fraction bar, but
inside things shouldn't be centered; most things' width are determined
by their contents, the only place this comes up is
\MathQuillMathField's.

--- a/src/css/math.less
+++ b/src/css/math.less
@@ -208,7 +208,6 @@
   // fractions
   .mq-fraction {
     font-size: 90%;
-    text-align: center;
     vertical-align: -.5em;
     padding: 0 .2em;
   }
@@ -226,6 +225,10 @@
 
   .mq-numerator, .mq-denominator {
     display: block;
+    text-align: center;
+    * {
+      text-align: left;
+    }
   }
 
   .mq-numerator {
