fix chrome/window bug with -webkit-text-stroke
On Chrome on Windows, when the font shrunk +'s, -'s, ='s were losing some horizontal lines. This seems to be a known bug in the Chrome rendering engine, and is affecting all Google Web Fonts also (they default to woff):
https://code.google.com/p/chromium/issues/detail?id=137692

Of the many recommended hacks / fixes, the one that looks best is to add the -webkit-text-stroke css rule. Recommended size is .35px. I found that .3px looks best.

We'll want to revert this commit when Chrome finally gets it's freaking act together.

--- a/src/css/math.less
+++ b/src/css/math.less
@@ -25,6 +25,7 @@
   // TODO: dasherize non-symbola
   var, .mq-text, .mq-nonSymbola {
     font-family: @times;
+    -webkit-text-stroke: 0;
     line-height: .9;
   }
 
@@ -56,6 +57,7 @@
 
   .mq-font {
     font: 1em @times;
+    -webkit-text-stroke: 0;
     line-height: .9;
 
     * {
@@ -82,12 +84,13 @@
   }
 
   .mq-sans-serif {
-    
     font-family: @sans-serif;
+    -webkit-text-stroke: 0;
   }
 
   .mq-monospace {
     font-family: @monospace;
+    -webkit-text-stroke: 0;
   }
 
   .mq-overline {
@@ -202,6 +205,7 @@
   // like \sin, \cos, \ln, etc.
   .mq-un-italicized {
     font-family: @times;
+    -webkit-text-stroke: 0;
     line-height: 1;
     font-style: normal;
   }
@@ -290,5 +294,6 @@
   &, .mathquill-editable {
     cursor: text;
     font-family: @symbola;
+    -webkit-text-stroke: .3px;
   }
 }
