no webkit-text-stroke on retina

--- a/src/css/math.less
+++ b/src/css/math.less
@@ -297,3 +297,9 @@
     -webkit-text-stroke: .3px;
   }
 }
+
+@media (-webkit-min-device-pixel-ratio: 2) {
+  .mathquill-editable, .mathquill-rendered-math {
+    -webkit-text-stroke: 0;
+  }
+}
