--- a/src/css/math.less
+++ b/src/css/math.less
@@ -139,14 +139,6 @@
       font-size: 70%;
       vertical-align: -0.4em;
     }
-
-    .mq-numerator {
-      padding-bottom: 0;
-    }
-
-    .mq-denominator {
-      padding-top: 0;
-    }
   }
 
   sub {
@@ -255,7 +247,7 @@
     border-top: 1px solid;
     float: right; // take out of normal flow to manipulate baseline
     width: 100%;
-    padding: .1em .1em 0 .1em;
+    padding: .1em .1em 0.05em .1em;
     margin-right: -.1em;
     margin-left: -.1em;
   }
