update paren alignment
add a little top/bottom padding to help with alignment

--- a/src/css/math.less
+++ b/src/css/math.less
@@ -169,7 +169,7 @@
   ////
   // parentheses
   .mq-paren {
-    padding: 0 .1em;
+    padding: 0.05em .1em;
     vertical-align: bottom;
     -webkit-transform-origin: bottom center;
     -moz-transform-origin: bottom center;
