a lil more top padding

--- a/src/css/math.less
+++ b/src/css/math.less
@@ -258,6 +258,7 @@
     padding-left: .15em;
     padding-right: .2em;
     margin-right: .1em;
+    padding-top: 1px;
   }
 
   .mq-vector-prefix {
